# bot2

./: .env.example  .gitignore  README.md  README_KR.md  app.py  app_simple.py  demo.py  docker-compose.yml  pyproject.toml  requirements.txt
agents/: agent_manager.py  agents.py  alpha_derivatives.py  alpha_microstructure.py  base.py  regime_bocpd.py  shock_gate.py
analysis/: __init__.py  simple_analysis.py  technical_analysis.py
auto_trader/: .env.example  README.md  docker-compose.yml  pyproject.toml
auto_trader/agents/: alpha_derivatives.py  alpha_microstructure.py  base.py  regime_bocpd.py  shock_gate.py
auto_trader/configs/: fees.yaml
auto_trader/dashboards/: pnl_report.py
auto_trader/exec/: broker_base.py  broker_binance.py  broker_paper.py  execution_engine.py
auto_trader/features/: derivatives.py  microprice.py  ofi.py  spreads.py
configs/: fees.yaml  settings.yaml
dashboards/: pnl_report.py
data_collection/: market_data.py  mock_data.py
exec/: broker_base.py  broker_binance.py  broker_paper.py  execution_engine.py
features/: derivatives.py  microprice.py  ofi.py  spreads.py
ingest/: binance_perp.py  binance_spot.py  exchange_base.py  orderbook_rebuilder.py  ws_client.py
libs/common/: types.py  (+1 more)
risk/: guardrails.py  sizing.py
router/: meta_router.py
scripts/: run_live.sh  run_paper.sh
sim/: backtester.py
templates/: index.html
tests/: test_agents_contract.py  test_end_to_end.py  test_execution_pov.py  test_meta_router.py  test_ofi_microprice.py  test_orderbook.py
trading/: __init__.py  paper_trader.py
utils/: database.py
(+21 files in other folders)
