[tool.poetry]
name = "auto-trader"
version = "0.1.0"
description = "이벤트 구동형 자동매매 엔진"
authors = ["Auto Trader"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0"
websockets = "^11.0"
structlog = "^23.1"
httpx = "^0.24"
redis = "^5.0"
numpy = "^1.24"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
